# redflag-mcp

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Learning.md  README.md  pyproject.toml  railway.toml
.claude/: settings.local.json
data/eval/: hosted_retrieval_queries.yaml
data/lexicon/: aliases.yaml  source_metadata.yaml
data/source/: .extracted_sources.yaml  001_federal_child_nutrition_fraud.yaml  002_oil_smuggling_cartels.yaml  003_bulk_cash_smuggling_repatriation.yaml  004_fincen_name_fraud_schemes.yaml  005_deepfake_media_fraud.yaml  006_hizballah_financing.yaml  007_employee_retention_credit_fraud.yaml  008_hamas_terrorist_financing.yaml  021_isis_financing.yaml  (+34 more)
docs/: Red_flag_types.md  hosted-deployment.md
red_flag_sources/: Additional_sources_05132026.csv  Global_AML_CFT_Sanctions_Red_Flag_Catalog.csv  Markdown_Red_Flag_Source_Catalog.csv  Weblinks.md  pdflinks.txt  red_flag_sources.md  registry.csv  sources.yaml
scripts/: build_corpus.py  build_registry.py  build_sources_registry.py  evaluate_retrieval.py  extract.py  harvest_sources.py  ingest.py  pipeline.py  review_markdown_sources.py  verify_corpus.py
tests/: conftest.py  test_build_registry.py  test_corpus.py  test_corpus_install.py  test_deployment_config.py  test_embeddings.py  test_extract.py  test_harvest_sources.py  test_http_app.py  test_ingest.py  test_lexicalstore.py  test_lexicon.py  test_models.py  test_pipeline.py  test_prompts.py  test_resources.py  test_retrieval_eval.py  test_review_markdown_sources.py  test_runtime_config.py  test_tools.py  test_vectorstore.py
(+35 files in other folders)
